--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.password = Vpce
 spring.application.name = MS-COMMANDE
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
-server.port=8081
+server.port=8087
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address = true
